--- a/package.json
+++ b/package.json
@@ -10,14 +10,21 @@
     "test": "jest"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.5",
+    "@mui/material": "^5.15.5",
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.9",
     "react": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-calendars": "^1.1303.0",
     "react-native-gesture-handler": "^2.14.1",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^3.6.1",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
+    "react-native-vector-icons": "^10.0.3",
     "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
